@@ -100,10 +100,5 @@
 #define USE_DOCK_TOPLEVEL_EVENT 0
 
 
-// HIDE_VIDEO_WINDOW_ON_AUDIO_FILES
-// if 1, the video window will be hidden when playing audio files
-
-#define HIDE_VIDEO_WINDOW_ON_AUDIO_FILES 1
-
 #endif
 
